
DesignManager
 - Correct new template creation

FileManager
 - BR #12535 - File Manager Unpack archive .tar.gz.

FilePicker
 - BR #12621 - FilePicker upload bug.

MenuManager 1.50.4
 - migrated from core to a normal CMSMS module in Forge 
 - BR #12619 - Wrong assignment of $prevdepth.
 - BR #12620 - Version 2 breaks MenuManager with childrenof.

News
 - Sanitise news-item strings (title, summary, content) before display

Phar Installer 1.4
 - Always-optional post-installation email includes more advice, and no password

Version 2.2.18 - Apex
-------------------------------
Core - General
 - strftime()-replacement works without Intl extension if necessary.

Version 2.2.17 - Iqaluit
-------------------------------
Everywhere Compatibility fixes for PHP 7, 8.0 and 8.1

Core - General
 - BR #12529 - Cacheable Pages have Bad Header Last-Modified
 - BR #12543 - Lib file corrections
 - BR #12587 - can't uninstall modules
 - BR #12618 - HasChildren() is broken
 - Smarty upgraded to version 4.2.1
    Note: Smarty 2 syntax is still supported, but deprecated
 - Added function CMSMS\strftime to replace deprecated PHP function. PHP Intl extension recommended to support this.
 - Enabled use of PHP functions trim,ltrim,rtrim in Smarty templates.
 - PHPMailer upgraded to version 6.6.0.
 - Added module's support for arrays in parameters.
 - Added getter, setter methods and autotls settings to cms_mailer class.

Content Manager 1.1.10
 - Differentiate new page from cloned page.

Design Manager 1.1.10
 - BR #12545 - Module: DesignManager typo info on top file.

FilePicker 1.0.6
 - BR #12539 - Module FilePicker 1.0.5 files corrections.

Module Manager 2.1.9
 - BR #12541 - Module ModuleManager 2.1.8 : corrections 

News 2.51.12
 - BR #12543 - Lib file corrections.

FileManager 1.6.13
 - BR TBA

Version 2.2.16 - Truro
-------------------------------
Core - General
  - BR #12370 - Admin Log-Download : now downloading the log honors all filters but doesn't process paging.