@@ -35,12 +35,12 @@ $lang['addusertag'] = "Add User Defined Tag";
 $lang['admin'] = "Site Admin";
 $lang['adminaccess'] = "Access to login to Admin";
 $lang['admincallout'] = "Administration Shortcuts";
-$lang['admindescription'] = "Site Administration functions";
+$lang['admindescription'] = "Site administration functions.";
 $lang['adminhome'] = "Administration Home";
 $lang['adminindent'] = "Content Display";
 $lang['adminlog'] = "Admin Log";
 $lang['adminlogcleared'] = "The Admin Log was successfully cleared";
-$lang['adminlogdescription'] = "This logs Admin activity and shows i.e. content changes, user information, and time of access.";
+$lang['adminlogdescription'] = "This logs Admin activity and shows e.g. content changes, user information, and time of access.";
 $lang['adminlogempty'] = "The Admin Log is empty";
 $lang['adminlog_1day'] = "1 day";
 $lang['adminlog_1month'] = "1 month";
@@ -382,7 +382,7 @@ $lang['error_module_mincmsversion'] = "This module requires a newer version of C
 $lang['error_multiusersettings'] = "Cannot set multiple user settings options at the same time";
 $lang['error_nofileuploaded'] = "No File has been uploaded";
 $lang['error_nograntall_found'] = "Could not find a suitable &quot;GRANT ALL&quot; permission, this does not necessarily lead to problems... But if you have problems installing/removing modules or adding and deleting items/pages this could be the cause!";
-$lang['error_nomodules'] = "No modules installed! Check Site Admin > Module Manager";
+$lang['error_nomodules'] = "No modules installed! Check Extensions > Module Manager";
 $lang['error_notconfirmed'] = "Operation not confirmed";
 $lang['error_no_content_blocks'] = "No content blocks were detected in this template.  Please ensure that you have at least the default {content} block defined in this template";
 $lang['error_no_default_content_block'] = "No default content block was detected in this template. Please ensure that you have a {content} tag in the page template.";
@@ -393,7 +393,7 @@ $lang['error_portinvalid'] = "Port number is invalid";
 $lang['error_retrieving_file_list'] = "Error retrieving file list";
 //$lang['error_setusersettings_self'] = "Cannot set the template user to this account";
 $lang['error_sitedownmessage'] = 'It appears that your sitedown message is empty.  Please at least display some text to inform visitors that your website is down for maintenance';
-$lang['error_timedifference2'] = "A discrepancy in time with the PHP environment was detected. This may cause problems when publishing i.e. news articles.";
+$lang['error_timedifference2'] = "A discrepancy in time with the PHP environment was detected. This may cause problems when publishing e.g. news articles.";
 $lang['error_timeoutinvalid'] = "The time-out specified is invalid (must be between 1 and 3600 seconds)";
 $lang['error_type'] = "Error Type";
 $lang['error_udt_name_chars'] = "A valid UDT name starts with a letter or underscore, followed by any number of letters, numbers, or underscores.";
@@ -1227,7 +1227,7 @@ $lang['msg_usersettingscopied'] = "User settings copied from template user accou
 $lang['myaccount'] = "My Account";
 $lang['myaccountdescription'] = "This is where you can update your personal account details.";
 $lang['myprefs'] = "My Preferences";
-$lang['myprefsdescription'] = "This is where you can customize the site Admin area to work the way you want.";
+$lang['myprefsdescription'] = "This is where you can customize the site Admin Console to work the way you want.";
 
 ## N
 $lang['name'] = "Name";
